# weave-mcp-server-client-trace

./: .env.example  README.md  client.py  pyproject.toml  server.py
