[project]
name = "tracing-between-mcp-client-and-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix-otel>=0.9.0",
    "fastmcp>=2.2.2",
    "mcp>=1.6.0",
    "openai>=1.76.0",
    "openai-agents>=0.0.13",
    "openinference-instrumentation-mcp>=1.1.0",
    "openinference-instrumentation-openai>=0.1.25",
    "openinference-instrumentation-openai-agents>=0.1.8",
    "openinference-semantic-conventions>=0.1.17",
    "pydantic>=2.11.3",
]
